--- a/pug/cards/_card-full-advant-news.pug
+++ b/pug/cards/_card-full-advant-news.pug
@@ -16,7 +16,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.card-full__title
+				.card__title.card-full__title.font-size-40
 					a(href='#') Хороший старт!
 				.card__text.card-full__text
 					p
