--- a/pug/cards/_cards-third.pug
+++ b/pug/cards/_cards-third.pug
@@ -1,12 +1,10 @@
-//- .cards.cards-third
-	.card.card-third
 .row
 	.col-xl-4
-		.card.card-wrap.card-third-wrap
-			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-01.jpg);')
+		.card.bg-color-dark-1
+			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-01.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.card-third__content
+			.card__content
 				.tagbox
 					.tag
 						button.button.button-tag Региональные новости
@@ -17,19 +15,19 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.card-third__title
+				.card__title
 					a(href='#')
-						| Насосно-компрессорные 
+						| Насосно-компрессорные
 						br
 						| трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
 	.col-xl-4
-		.card-wrap.card-third-wrap
-			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-02.jpg);')
+		.card.bg-color-dark-1
+			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-02.jpg);')
 				.card-warning-text
 					p Оценка: ПЛОХО!
-			.card__content.card-third__content
+			.card__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ПС
@@ -40,7 +38,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.card-third__title
+				.card__title
 					a(href='#')
 						| Обход управлющего 
 						br
@@ -48,9 +46,9 @@
 				.card-date
 					span 24 Сентября 2018
 	.col-xl-4
-		.card.card-third_fullHeightImg
-			.card-wrap.card-third-wrap_fullHeightImg(style='background-image: url(img/news-third-full-img-01.jpg);')
-				.card__content.card-third__content
+		.card
+			.card-wrap(style='background-image: url(img/news-third-full-img-01.jpg);')
+				.card__content.card__content_sm
 					.tagbox
 						.tag
 							button.button.button-tag.button-tag_dark Новости ПС
@@ -61,7 +59,7 @@
 							button.like-button.like-button_light
 								i.icon-like
 								span.like-count 1286
-					.card__title.card-third__title
+					.card__title.card-color-light
 						a(href='#')
 							| Насосно-компрессорные 
 							br
