--- a/pug/cards/_cards-two-thirds_left.pug
+++ b/pug/cards/_cards-two-thirds_left.pug
@@ -1,47 +1,50 @@
-.cards.cards-two-thirds.cards-two-thirds_left
-	.card.cardTwoThirds
-		.card-wrap.cardTwoThirds-wrap
-			.cardTwoThirds__imgbox.card__imgbox(style='background-image: url(img/news-twothirds-img-01.jpg);')
-				.card-warning-text.hide
-					p
-			.card__content.cardTwoThirds__content
-				.tagbox
-					.tag
-						button.button.button-tag Новости ПС
-					.like-card
-						button.like-button.comment-button
-							i.icon-comment
-							span.like-count 23
-						button.like-button
-							i.icon-like
-							span.like-count 1286
-				.card__title.cardTwoThirds-title
-					a(href='#')
-						| Насосно-компрессорные 
-						br
-						| трубы ТЭСЦ-1
-				.card-date
-					span 24 Сентября 2018
-	.card.card-third
-		.card-wrap.card-third-wrap
-			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-03.jpg);')
-				.card-warning-text.hide
-					p
-			.card__content.card-third__content
-				.tagbox
-					.tag
-						button.button.button-tag Новости ПС
-					.like-card
-						button.like-button.comment-button
-							i.icon-comment
-							span.like-count 23
-						button.like-button
-							i.icon-like
-							span.like-count 1286
-				.card__title.card-third__title
-					a(href='#')
-						| Обход управлющего 
-						br
-						|  директора БАЗ цеха №1
-				.card-date
-					span 24 Сентября 2018
+//.cards.cards-two-thirds.cards-two-thirds_left
+.row
+	.col-xl-8
+		.card
+			.card-wrap
+				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-twothirds-img-01.jpg);')
+					.card-warning-text.hide
+						p
+				.card__content.cardTwoThirds__content
+					.tagbox
+						.tag
+							button.button.button-tag Новости ПС
+						.like-card
+							button.like-button.comment-button
+								i.icon-comment
+								span.like-count 23
+							button.like-button
+								i.icon-like
+								span.like-count 1286
+					.card__title
+						a(href='#')
+							| Насосно-компрессорные
+							br
+							| трубы ТЭСЦ-1
+					.card-date
+						span 24 Сентября 2018
+	.col-xl-4
+		.card
+			.card-wrap
+				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-03.jpg);')
+					.card-warning-text.hide
+						p
+				.card__content
+					.tagbox
+						.tag
+							button.button.button-tag Новости ПС
+						.like-card
+							button.like-button.comment-button
+								i.icon-comment
+								span.like-count 23
+							button.like-button
+								i.icon-like
+								span.like-count 1286
+					.card__title
+						a(href='#')
+							| Обход управлющего
+							br
+							|  директора БАЗ цеха №1
+					.card-date
+						span 24 Сентября 2018
