--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -160,6 +160,8 @@
 		padding-bottom: 0;
 		width: 100%;
 		background-color: #fff;
+		border: none;
+		border-radius: 0;
 		&-wrap{
 			position: relative;
 		}
