--- a/sass/general/_variables.scss
+++ b/sass/general/_variables.scss
@@ -15,7 +15,7 @@ $tooltip-arrow-color:    $tooltip-bg;
 $error-color:            #FF4F4F;
 $valid-color:            #39b54a;
 
-$succes-color:					 #39b54a;
+$success-color:					 #39b54a;
 
 // Текст
 $text-color: $basic-color;
