--- a/pug/cards/_card-full_imgfullheight.pug
+++ b/pug/cards/_card-full_imgfullheight.pug
@@ -1,20 +1,22 @@
-.card.card-full.card-full_fullHeightImg
-	.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-		.card__content.card-full__content
-			.tagbox
-				.tag
-					button.button.button-tag.button-tag_dark Новости ОМК
-				.like-card
-					button.like-button.like-button_light.comment-button
-						i.icon-comment
-						span.like-count 23
-					button.like-button.like-button_light
-						i.icon-like
-						span.like-count 1286
-			.card__title.card-full__title
-				a(href='#') Хороший старт!
-			.card__text.card-full__text
-				p
-					| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
-			.card-date.card-date_light
-				span 24 Сентября 2018
+.row
+	.col-12
+		.card.card-full.card-full_imgbg
+			.card-wrap(style='background-image: url(img/news-full.jpg);')
+				.card__content.card-full__content
+					.tagbox
+						.tag
+							button.button.button-tag.button-tag_dark Новости ОМК
+						.like-card
+							button.like-button.like-button_light.comment-button
+								i.icon-comment
+								span.like-count 23
+							button.like-button.like-button_light
+								i.icon-like
+								span.like-count 1286
+					.card__title.card-full__title.card-color-light
+						a(href='#') Хороший старт!
+					.card__text.card-full__text.card-color-light
+						p
+							| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
+					.card-date.card-date_light
+						span 24 Сентября 2018
