--- a/pug/cards/_cards-two-thirds_right.pug
+++ b/pug/cards/_cards-two-thirds_right.pug
@@ -1,10 +1,11 @@
-.cards.cards-two-thirds.cards-two-thirds_right
-	.card.card-third
-		.card-wrap.card-third-wrap
-			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-04.jpg);')
-				.card-warning-text.hide
-					p
-			.card__content.card-third__content
+//.cards.cards-two-thirds.cards-two-thirds_right
+.row
+	.col-xl-4
+		.card.bg-color-dark-1
+			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-04.jpg);')
+				.card-succes-text
+					p Оценка "Хорошо!"
+			.card__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ПС
@@ -15,30 +16,31 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.card-third__title
+				.card__title
 					a(href='#')
-						| Обход управлющего 
+						| Обход управлющего
 						br
 						|  директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardTwoThirds.cardTwoThirds_fullHeightImg
-		.card-wrap.cardTwoThirds-wrap.cardTwoThirds-wrap_fullHeightImg(style='background-image: url(img/news-twothirds-full-img-01.jpg);')
-			.card__content.cardTwoThirds__content
-				.tagbox
-					.tag
-						button.button.button-tag.button-tag_dark Новости ПС
-					.like-card
-						button.like-button.like-button_light.comment-button
-							i.icon-comment
-							span.like-count 23
-						button.like-button.like-button_light
-							i.icon-like
-							span.like-count 1286
-				.card__title.cardTwoThirds-title
-					a(href='#')
-						| Насосно-компрессорные 
-						br
-						| трубы ТЭСЦ-1
-				.card-date.card-date_light
-					span 24 Сентября 2018
+	.col-xl-8
+		.card
+			.card-wrap(style='background-image: url(img/news-twothirds-full-img-01.jpg);')
+				.card__content.card__content_sm
+					.tagbox
+						.tag
+							button.button.button-tag.button-tag_dark Новости ПС
+						.like-card
+							button.like-button.like-button_light.comment-button
+								i.icon-comment
+								span.like-count 23
+							button.like-button.like-button_light
+								i.icon-like
+								span.like-count 1286
+					.card__title.card-color-light
+						a(href='#')
+							| Насосно-компрессорные
+							br
+							| трубы ТЭСЦ-1
+					.card-date.card-date_light
+						span 24 Сентября 2018
