--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -23,7 +23,7 @@ a {
 }
 a,
 button,
-label, {
+label {
 	cursor: pointer;
 }
 
@@ -70,6 +70,13 @@ img{
 @include marginBottom(20);
 @include marginBottom(30);
 
+
+@include fontSizeClass(17);
+@include fontSizeClass(24);
+@include fontSizeClass(28);
+@include fontSizeClass(32);
+@include fontSizeClass(40);
+
 *.bg-color {
   &-light {
     background-color: $light-color;
@@ -88,7 +95,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6,
 .section-title, 
-.title, {
+.title {
 	margin: 0;
 	padding: 0;
 	font-family: "PT Serif", serif;
@@ -101,7 +108,7 @@ h6, .h6,
 	border-radius: 5px;
 	background-color: #dddee0;
 	color: #000000;
-	font-family: Roboto;
+	font-family: Roboto serif;
 	font-size: 16px;
 	font-weight: 400;
 	&__link {
@@ -271,7 +278,7 @@ section, .section {
 	&__left {
 		left: 15px;
 		border-radius: 5px 0 0 5px;
-		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat; 
+		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat;
 		background-size: 65%;
 		@include hover {
 			background-color: rgba($light-color, 0.35);
