--- a/pug/widgets/_widget-02.pug
+++ b/pug/widgets/_widget-02.pug
@@ -1,5 +1,5 @@
 // widget
-.widget-box.widget-calendar
+.widget-box.widget_fix-height-240.padding-all-15.bg-color-dark-2.border-default
 	.widget-title
 		| КОНКУРСЫ
 	.widget-imgbox
