fix margin classes

--- a/pug/cards/_card-mosaic-slider.pug
+++ b/pug/cards/_card-mosaic-slider.pug
@@ -5,7 +5,7 @@
 		- var imgBoxClass ='';
 
 		.card-full-slider__item
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/article-img-02.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -13,7 +13,7 @@
 				- var imgUrl = 'img/block-img-02.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-12.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -21,7 +21,7 @@
 				- var imgUrl = 'img/block-img-03.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-07.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -30,7 +30,7 @@
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-06.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -40,7 +40,7 @@
 					img(src=imgUrl, alt="image", class=imgClass)
 
 		.card-full-slider__item
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-01.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -48,7 +48,7 @@
 				- var imgUrl = 'img/block-img-02.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-10.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -56,7 +56,7 @@
 				- var imgUrl = 'img/block-img-03.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-07.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
@@ -65,7 +65,7 @@
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
-			.card__imgwrap.card__imgwrap_slim
+			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-06.jpg';
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
