--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -144,6 +144,7 @@ dl {
 
 p, .section-text, .text {
 	color: inherit;
+	margin-bottom: 0;
 	// color: $text-color;
 	// &.text-dark {
 	// 	color: $text-dark-color;
