--- a/css/style.css
+++ b/css/style.css
@@ -1128,6 +1128,7 @@ p,
 .section-text,
 .text {
   color: inherit;
+  margin-bottom: 0;
 }
 
 h2 span,
@@ -3543,6 +3544,10 @@ h2 span,
 }
 
 .card__imgwrap_slim {
+  margin-bottom: 15px;
+}
+
+.card__imgwrap.margin-bottom-15 {
   margin-bottom: 15px;
 }
 
