--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -73,6 +73,9 @@
 		&_slim {
 			margin-bottom: 15px;
 		}
+		&.margin-bottom-15 {
+			margin-bottom: 15px;
+		}
 		&:last-child {
 			margin-bottom: 0;
 		}
