--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -45,7 +45,7 @@
 
 .link-big {
 	color: $basic-color;
-	font-family: Roboto;
+	font-family: "Roboto", sans-serif;
 	font-size: 32px;
 	font-weight: 700;
 	line-height: 40px;
