--- a/sass/general/_form.scss
+++ b/sass/general/_form.scss
@@ -26,11 +26,10 @@
 
 
 	&__title {
-		// font-size: 24px;
-		font-weight: 400;
-		font-family: Roboto;
+		//font-weight: 400;
+		font-family: "Roboto", sans-serif;
 		font-weight: inherit;
-		font-size: 1.5em;
+		font-size: 24px;
 		&_alt {
 			position: absolute;
 			top: 0;
