--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,7 @@ img {
   margin-bottom: 30px;
 }
 
-*.padding-all-15 {
+.padding-all-15 {
   padding: 15px;
 }
 
@@ -1301,7 +1301,7 @@ h2 span,
 
 .link-big {
   color: #5e6167;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 32px;
   font-weight: 700;
   line-height: 40px;
@@ -1475,10 +1475,9 @@ h2 span,
 }
 
 .form__title {
-  font-weight: 400;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-weight: inherit;
-  font-size: 1.5em;
+  font-size: 24px;
 }
 
 .form__title_alt {
@@ -3093,7 +3092,6 @@ h2 span,
 }
 
 .content-group {
-  padding-top: 37px;
   padding-top: 18px;
 }
 
@@ -3134,7 +3132,7 @@ h2 span,
 .content-titlebox_specialtitle div,
 .content-titlebox_specialtitle span {
   margin-top: 15px;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
 }
 
@@ -3158,12 +3156,12 @@ h2 span,
 .content-titlebox_dark div,
 .content-titlebox_dark span {
   color: inherit;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
 
 .content-titlebox_dark h4 {
   font-weight: 400;
-  font-size: 1.375em;
+  font-size: 22px;
 }
 
 .content-titlebox_collapse {
@@ -3240,14 +3238,14 @@ h2 span,
 }
 
 .content-subtitle h2 {
-  font-family: Roboto;
-  font-size: 1.125em;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
   font-weight: inherit;
 }
 
 .content-subtitle h3 {
-  font-family: Roboto;
-  font-size: 1em;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
   font-weight: inherit;
 }
 
@@ -3262,25 +3260,25 @@ h2 span,
 }
 
 .content-text h2 {
-  font-size: 1.5em;
-  font-family: Roboto;
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
   font-weight: inherit;
 }
 
 .content-text h3 {
   margin-bottom: 15px;
-  font-size: 1.375em;
-  font-family: Roboto;
+  font-size: 22px;
+  font-family: "Roboto", sans-serif;
   font-weight: inherit;
 }
 
 .content-text h3 .small {
   display: block;
-  font-size: 0.7728em;
+  font-size: 12px;
 }
 
 .content-text p {
-  font-size: 1.0625em;
+  font-size: 17px;
   margin-bottom: 5px;
 }
 
@@ -3647,7 +3645,7 @@ h2 span,
 }
 
 .card-warning-text p {
-  font-size: 1em;
+  font-size: 11px;
   margin-bottom: 0;
 }
 
@@ -3664,7 +3662,7 @@ h2 span,
 }
 
 .card-succes-text p {
-  font-size: 1em;
+  font-size: 11px;
   margin-bottom: 0;
 }
 
@@ -3681,7 +3679,7 @@ h2 span,
 }
 
 .card-average-text p {
-  font-size: 1em;
+  font-size: 11px;
   margin-bottom: 0;
 }
 
@@ -4183,7 +4181,7 @@ h2 span,
 
 .card-links a {
   color: inherit;
-  font-size: 1em;
+  font-size: 20px;
   font-weight: inherit;
   -webkit-transition: color 0.2s;
   -o-transition: color 0.2s;
@@ -4502,13 +4500,13 @@ h2 span,
   margin-bottom: 3px;
   font-family: "Roboto", sans-serif;
   color: #ffffff;
-  font-size: 1.125em;
+  font-size: 18px;
   font-weight: 400;
 }
 
 .widget-imgbox__text p {
   color: #bcbdc0;
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -4975,7 +4973,7 @@ h2 span,
 
 .article-text h3 {
   margin-bottom: 18px;
-  font-size: 1.375em;
+  font-size: 22px;
 }
 
 .article-autor {
@@ -4999,7 +4997,7 @@ h2 span,
 .article-autor__left {
   vertical-align: middle;
   float: left;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 400;
 }
@@ -5007,7 +5005,7 @@ h2 span,
 .article-autor__username {
   vertical-align: middle;
   display: inline-block;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 300;
 }
@@ -5103,7 +5101,7 @@ h2 span,
 }
 
 .comment__text p {
-  font-size: 1em;
+  font-size: 14px;
   margin-bottom: 25px;
   font-weight: 400;
 }
@@ -5117,7 +5115,7 @@ h2 span,
 
 .comment__link > * {
   color: inherit;
-  font-size: 1em;
+  font-size: 14px;
   font-weight: inherit;
 }
 
