--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -113,7 +113,7 @@
 		}
 		h3 {
 			margin-bottom: 18px;
-			font-size: 1.375em;
+			font-size: 22px;
 		}
 	}
 	&-autor {
@@ -130,7 +130,7 @@
 			vertical-align: middle;
 			// display: inline-block;
 			float: left;
-			font-family: Roboto;
+			font-family: "Roboto", sans-serif;
 			font-size: 20px;
 			font-weight: 400;
 		}
@@ -138,7 +138,7 @@
 		&__username {
 			vertical-align: middle;
 			display: inline-block;
-			font-family: Roboto;
+			font-family: "Roboto", sans-serif;
 			font-size: 14px;
 			font-weight: 300;
 		}
