--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -151,7 +151,7 @@
 		font-size: 11px;
 		font-weight: 400;
 		p {
-			font-size: 1em;
+			font-size: 11px;
 			margin-bottom: 0;
 		}
 	}
@@ -166,7 +166,7 @@
 		font-size: 11px;
 		font-weight: 400;
 		p {
-			font-size: 1em;
+			font-size: 11px;
 			margin-bottom: 0;
 		}
 	}
@@ -181,7 +181,7 @@
 		font-size: 11px;
 		font-weight: 400;
 		p {
-			font-size: 1em;
+			font-size: 11px;
 			margin-bottom: 0;
 		}
 	}
@@ -589,7 +589,7 @@
 	}
 	& a {
 		color: inherit;
-		font-size: 1em;
+		font-size: 20px;
 		font-weight: inherit;
 		transition: color 0.2s;
 		@include hover {
