--- a/sass/_comment.scss
+++ b/sass/_comment.scss
@@ -56,7 +56,7 @@
 		font-size: 14px;
 		line-height: 20px;
 		p {
-			font-size: 1em;
+			font-size: 14px;
 			margin-bottom: 25px;
 			font-weight: 400;
 		}
@@ -71,7 +71,7 @@
 		}
 		& > * {
 			color: inherit;
-			font-size: 1em;
+			font-size: 14px;
 			font-weight: inherit;
 		}
 	}
