--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -6,7 +6,7 @@
 	&-group {
 		// display: flex;
 		// flex-wrap: wrap;
-		padding-top: 37px;
+		//padding-top: 37px;
 		padding-top: 18px;
 		// margin-left: -15px;
 		// margin-right: -15px;
@@ -33,7 +33,7 @@
 			h1, h2, h3, h4, h5, p, div, span {
 				margin-top: 15px;
 				// margin-bottom: 25px;
-				font-family: Roboto;
+				font-family: "Roboto", sans-serif;
 				font-weight: 700;
 			}
 		}
@@ -47,11 +47,11 @@
 			font-size: 16px;
 			h1, h2, h3, h4, h5, p, div, span {
 				color: inherit;
-				font-family: Roboto;
+				font-family: "Roboto", sans-serif;
 			}
 			h4 {
 				font-weight: 400;
-				font-size: 1.375em;
+				font-size: 22px;
 			}
 		}
 
@@ -95,13 +95,13 @@
 			text-align: right;
 		}
 		h2 {
-			font-family: Roboto;
-			font-size: 1.125em;
+			font-family: "Roboto", sans-serif;
+			font-size: 18px;
 			font-weight: inherit;
 		}
 		h3 {
-			font-family: Roboto;
-			font-size: 1em;
+			font-family: "Roboto", sans-serif;
+			font-size: 16px;
 			font-weight: inherit;
 		}
 		span {
@@ -113,23 +113,23 @@
 		color: $basic-color;
 		font-weight: 400;
 		h2 {
-			font-size: 1.5em;
-			font-family: Roboto;
+			font-size: 24px;
+			font-family: "Roboto", sans-serif;
 			font-weight: inherit;
 		}
 		h3 {
 			margin-bottom: 15px;
-			font-size: 1.375em;
-			font-family: Roboto;
+			font-size: 22px;
+			font-family: "Roboto", sans-serif;
 			font-weight: inherit;
 			.small {
 				display: block;
-				font-size: 0.7728em;
+				font-size: 12px;
 
 			}
 		}
 		p {
-			font-size: 1.0625em;
+			font-size: 17px;
 			margin-bottom: 5px;
 			.light {
 				color: #bcbdc0;
