--- a/sass/_widget.scss
+++ b/sass/_widget.scss
@@ -103,14 +103,14 @@
 				margin-bottom: 3px;
 				font-family: "Roboto", sans-serif;
 				color: $light-color;
-				font-size: 1.125em;
+				font-size: 18px;
 				font-weight: 400;
 
 			}
 
 			p {
 				color: #bcbdc0;
-				font-size: 1em;
+				font-size: 16px;
 				font-weight: 400;
 			}
 		}
