--- a/pug/cards/_card-full-slider.pug
+++ b/pug/cards/_card-full-slider.pug
@@ -1,6 +1,6 @@
 .row
 	.col-xl-12
-		.card.margin-bottom-30.card-full-.card-full-slider-.card-slider
+		.card.margin-bottom-30.card-full.card-full-slider.card-slider
 			.post-info
 				.post-info__title
 					span.slider-number #54 из 82:
