--- a/pug/cards/_cards-full-galery-slider-imgfull-text.pug
+++ b/pug/cards/_cards-full-galery-slider-imgfull-text.pug
@@ -2,7 +2,7 @@
 	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
-				h2 Галерея - "Слайдер с описанием", тип "Светлый"
+				h2 Галерея - "Слайдер с описанием", тип "Темный"
 
 		.content-title
 			.content-titlebox
