--- a/pug/modals/_modal-content-comments.pug
+++ b/pug/modals/_modal-content-comments.pug
@@ -126,9 +126,9 @@
 						button.comment__reply Ответить
 		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
-				.article-autor
-					p.article-autor__left Оставить комментарий:
-					p.article-autor__username от Константина Константинопольского
+				.article-author
+					p.article-author__left Оставить комментарий:
+					p.article-author__username от Константина Константинопольского
 			.comment
 				form.comment-form
 					.comment-form__textareabox
