--- a/pug/post.pug
+++ b/pug/post.pug
@@ -43,7 +43,7 @@ block content
 					p
 						| Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.
 					p Сегодня в комплексе работает около 1200 сотрудников.
-				.article-autor
+				.article-author
 					each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
 						a.hashtag(href='#')= item
 					p Автор статьи: Елена Мацинова
@@ -178,9 +178,9 @@ block content
 						button.comment__reply Ответить
 		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
-				.article-autor
-					p.article-autor__left Оставить комментарий:
-					p.article-autor__username от Константина Константинопольского
+				.article-author
+					p.article-author__left Оставить комментарий:
+					p.article-author__username от Константина Константинопольского
 			.comment
 				form.comment-form
 					.comment-form__textareabox
