--- a/sass/_comment-dark.scss
+++ b/sass/_comment-dark.scss
@@ -28,7 +28,7 @@
 			}
 		}
 	}
-	.article-autor {
+	.article-author {
 		padding: 0 15px;
 		background-color: rgba(#fbfbfb, 0.3);
 		color: #eeefef;
