--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -33,6 +33,7 @@ label,
 input {
 	background-color: transparent;
 	border: none;
+	margin-bottom: 0;
 }
 button, input, optgroup, select, textarea {
 	font-family: 'Roboto', sans-serif;
