--- a/pug/blocks/_block-article-only-text.pug
+++ b/pug/blocks/_block-article-only-text.pug
@@ -33,7 +33,7 @@ article(id=ID).article.cards
 			p
 				| Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.
 			p Сегодня в комплексе работает около 1200 сотрудников.
-		.article-autor
+		.article-author
 			each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
 				a.hashtag(href='#')= item
 			p Автор статьи: Елена Мацинова
