--- a/pug/gallery.pug
+++ b/pug/gallery.pug
@@ -4,34 +4,49 @@ block vars
 block content
 	include page/_page-special-title
 
+	//Галерея - "Изображение", высота "360 px"
 	- var cardSettings = {title: 'Галерея - "Изображение", высота "360 px"', cardSize: 'xl', imgUrl: 'img/img-block-full-01.jpg', imgClass: 'card-image'};
 	include cards/_cards-full-galery-img
 
+	//Галерея - "Изображение", высота "300 px"
 	- var cardSettings = {title: 'Галерея - "Изображение", высота "300 px"', cardSize: 'lg', imgUrl: 'img/img-block-full-02.jpg', imgClass: 'card-image'};
 	include cards/_cards-full-galery-img	
 
+	//Галерея - "Изображение", высота "210 px"
 	- var cardSettings = {title: 'Галерея - "Изображение", высота "210 px"', cardSize: 'sm', imgUrl: 'img/img-block-full-03.jpg', imgClass: 'card-image'};
 	include cards/_cards-full-galery-img
 
+	//Галерея - "Слайдер с описанием", тип "Светлый"
 	include cards/_cards-full-galery-slider-text
 
+	//Галерея - "Слайдер с описанием", тип "Темный"
 	include cards/_cards-full-galery-slider-imgfull-text
 
 	- var pageTitle = 'Галерея "Слайдер"';
-	include page/_page-special-title	
+	include page/_page-special-title
 
+	//Галерея - "Слайдер", тип "1"
 	include cards/_cards-galery-slider-full
 
+	//Галерея - "Слайдер", тип "2.1"
 	include cards/_cards-galery-slider-twothird-third
+
+	//Галерея - "Слайдер", тип "2.2"
 	include cards/_cards-galery-slider-third-twothird
+
+	//Галерея - "Слайдер", тип "2.3"
 	include cards/_cards-galery-slider-half
+
+	//Галерея - "Слайдер", тип "3"
 	include cards/_cards-galery-slider-thirds
 
 
 	- var pageTitle = 'Галерея "Фотоотчет"';
 	include page/_page-special-title
 
+	//Галерея - "Фотоотчет", тип "3х3"
 	include cards/_cards-galery-slider-thirds-3x3
 
+	//Галерея - "Фотоотчет", тип "Мозаика"
 	include cards/_cards-galery-slider-mosaic
 	
