--- a/sass/_comment.scss
+++ b/sass/_comment.scss
@@ -3,13 +3,13 @@
 	&_special {
 		// margin-top: -15px;
 		margin-bottom: 15px;
-		.article-autor {
+		.article-author {
 			margin-top: 0;
 		}
 	}
 	&-box {
 		position: relative;
-		padding: 15px;
+		//padding: 15px;
 		padding-left: 60px;
 		margin-bottom: 15px;
 		border-radius: 5px;
