--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -48,6 +48,7 @@
 			h1, h2, h3, h4, h5, p, div, span {
 				color: inherit;
 				font-family: "Roboto", sans-serif;
+				font-size: 22px;
 			}
 			h4 {
 				font-weight: 400;
