--- a/pug/modals/_modal-content-comments.pug
+++ b/pug/modals/_modal-content-comments.pug
@@ -7,7 +7,7 @@
 		.comment#commentator_01
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-01.jpg)')
-				.comment__content
+				.comment__content.padding-all-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
@@ -31,7 +31,7 @@
 			.comment#commentator_02
 				.comment-box
 					.comment__avatar(style='background-image: url(img/person-photo-02.jpg)')
-					.comment__content
+					.comment__content.padding-all-15
 						.tagbox.comment__tagbox
 							.tag
 								.comment__nickname
@@ -54,7 +54,7 @@
 				.comment#commentator_03
 					.comment-box
 						.comment__avatar(style='background-image: url(img/person-photo-03.jpg)')
-						.comment__content
+						.comment__content.padding-all-15
 							.tagbox.comment__tagbox
 								.tag
 									.comment__nickname
@@ -79,7 +79,7 @@
 		.comment#commentator_04
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-04.jpg)')
-				.comment__content
+				.comment__content.padding-all-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
@@ -103,7 +103,7 @@
 		.comment#commentator_05
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-05.jpg)')
-				.comment__content
+				.comment__content.padding-all-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
